Removed unnecessary addition, fixes.